crates/aranya-policy-compiler/tests/data/type_errors/string_compare_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: string
  |
2 |     return x < "test"
  |            ^^^^^^^^^^ expected `int` but found `string`
